<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">密码管理</string>
    <string name="realjt">RealJt</string>
    <string name="login">登录</string>
    <string name="use_explain">使用说明</string>
    <string name="settings">设置</string>
    <string name="add">新建账号</string>
    <string name="detail">账号详情</string>
    <string name="delete">删除</string>
    <string name="save_revise">保存修改</string>
    <string name="search">搜索</string>
    <string name="backup">备份</string>
    <string name="recovery">恢复</string>
    <string name="edit">编辑</string>
    <string name="change_password">修改登录密码</string>
    <string name="about">关于</string>
    <string name="accept">接受</string>
    <string name="do_not_accept">不接受</string>
    <string name="password_prompt">请输入6&#8211;16位字母、数字或符号</string>
    <string name="edition">Password Manager\n2016 For Flyme</string>
    <string name="edition_about">Password Manager 2016\nDeveloped By RealJt</string>
    <string name="name">名称</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="login_password">密&#160;&#160;码</string>
    <string name="remarks">备注</string>
    <string name="createtime">创建时间</string>
    <string name="revisetime">修改时间</string>
    <string name="classification">分类</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="clear_all">全部清空</string>
    <string name="clear">清空</string>
    <string name="use_path">使用此路径</string>
    <string name="login_prompt">登录提示</string>
    <string name="backup_savepath">备份路径</string>
    <string name="backup_use_login_password">使用登录密码备份</string>
    <string name="not_all_display_password">账号密码不全显示</string>
    <string name="immediately_exits">按Home键立即退出</string>
    <string name="original_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="support_author">支持作者</string>
    <string name="all">全部</string>
    <string name="life">生活</string>
    <string name="website">网站</string>
    <string name="bank">银行</string>
    <string name="classification_other">其他</string>
    <string name="classification_life">生活/实用</string>
    <string name="classification_website">网站/论坛</string>
    <string name="classification_bank">银行/购物</string>
    <string name="classification_study">学习/工作</string>
    <string name="classification_game">游戏/娱乐</string>
    <string name="statistics">数据统计</string>
    <string name="edition_content">密码管理\n2.0</string>
    <string name="clear_all_data">删除全部数据</string>
    <string name="save">保存</string>
    <string name="back_root">返回根目录</string>
    <string name="recovery_failed">恢复失败</string>
    <string name="send">发送</string>
    <string name="keep_on">继续</string>
    <string name="share">分享</string>
    <string name="no_authentication">未认证</string>
    <string name="trial_version">试用版</string>
    <string name="official_version">正式版</string>
    <string name="authentication_failed">认证失败</string>
    <string name="change_passowrd_tips">通常情况下，一个合格的密码应该至少有8位字符，并且其中包含字母、数字和符号。</string>
    <string name="use_explain_content">1.密码管理应用能轻松管理繁多的日常密码数据，给你的生活带来便捷，减少忘记密码烦恼；\n2.应用无联网权限，没有窃取、上传手机数据的行为，所有数据加密存储，请放心使用；\n3.应用升级、卸载前，请先备份数据，以避免数据丢失；\n4.由系统root、升级、刷机或手机丢失造成的损失，开发者不承担责任。</string>
    <string name="share_content">Hi，我在魅族应用商店发现了一个叫密码管理的APP，分享给你。</string>
    <string name="uninstall_meizuz_app_store">未安装魅族应用商店</string>
    <string name="wrong_password">密码错误</string>
    <string name="password_at_least_6_pleace">密码至少需要6位</string>
    <string name="keep_password_in_mind">请牢记此密码</string>
    <string name="verificating">验证中&#8230;</string>
    <string name="name_not_null">名称不能为空</string>
    <string name="already_save_revised">已保存修改</string>
    <string name="today">今天</string>
    <string name="just">刚刚</string>
    <string name="yesterday">昨天</string>
    <string name="backup_failed">备份失败</string>
    <string name="sd_card">SD Card</string>
    <string name="skin_peeler">换肤</string>
    <string name="private_order">私人订制</string>
    <string name="private_order_content">针对此App不满意的地方，或者UI界面需要订制的用户，请联系RealJt QQ2576707714。</string>
    <string name="help">帮助</string>
    <string name="display_hidden_file">显示隐藏文件</string>
    <string name="select_classification">选择分类</string>
    <string name="warn">警告</string>
    <string name="clear_data">清除数据</string>
    <string name="clear_data_tip">为防止密码数据被恶意清除，此处清除数据需要登录密码。</string>
    <string name="login_password_clear">登录密码数据</string>
    <string name="password_data">账号密码数据</string>
    <string name="explain">说明</string>
    <string name="clear_data_retain_password">保留登录密码</string>

</resources>