<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home_add"
        android:icon="@drawable/ic_sb_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/add"
        android:visible="false"/>
    <item
        android:id="@+id/action_home_search"
        android:icon="@drawable/ic_sb_search"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_home_backup"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/backup"/>
    <item
        android:id="@+id/action_home_recovery"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/recovery"/>
    <item
        android:id="@+id/action_home_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/settings"/>

</menu>