<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_manage_space_login_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:text="@string/password_prompt"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_marginTop="18dp"
            android:background="#C8C8C8" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp" >

            <EditText
                android:id="@+id/et_manage_space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLength="16"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="0dp"
                android:gravity="center_vertical"
                android:text="@string/login_password"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:background="#C8C8C8" />

        <CheckBox
            android:id="@+id/cb_manage_space_retain_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:checked="true"
            android:text="@string/clear_data_retain_password"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_manage_apace_clear"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_btn_red"
        android:text="@string/clear_data"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>