<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true" >

    <ImageView
        android:id="@+id/iv_about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/icon" />

    <com.realjt.meizu.passwordmanager.view.FontTextView
        android:id="@+id/tv_about_edition_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_about_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/edition_content"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_about_logo"
        android:layout_marginTop="90dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#C8C8C8" />

        <RelativeLayout
            android:id="@+id/rl_about_use_explain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_detail_item"
            android:clickable="true"
            android:minHeight="54dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_about_use_explain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="0dp"
                android:text="@string/use_explain"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/use_explain"
                android:src="@drawable/ic_detail_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#C8C8C8" />

        <RelativeLayout
            android:id="@+id/rl_about_private_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_detail_item"
            android:clickable="true"
            android:minHeight="54dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_about_private_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="0dp"
                android:text="@string/private_order"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/private_order"
                android:src="@drawable/ic_detail_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#C8C8C8" />

        <RelativeLayout
            android:id="@+id/rl_about_support_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_detail_item"
            android:clickable="true"
            android:minHeight="54dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_about_support_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60dp"
                android:layout_marginStart="0dp"
                android:text="@string/support_author"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="30dp"
                android:contentDescription="@string/support_author"
                android:src="@drawable/ic_detail_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#C8C8C8" />
    </LinearLayout>

    <com.realjt.meizu.passwordmanager.view.FontTextView
        android:id="@+id/tv_about_edition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/edition_about"
        android:textColor="#3d3e40" />

</RelativeLayout>