<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_change_password_original"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:minHeight="64dp"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/white"
                    android:text="@string/original_password"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:background="#C8C8C8" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_change_password_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:minHeight="64dp"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/white"
                    android:text="@string/new_password"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:background="#C8C8C8" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <EditText
                    android:id="@+id/et_change_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    android:minHeight="64dp"
                    android:textSize="23sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="0dp"
                    android:background="@android:color/white"
                    android:text="@string/confirm_new_password"
                    android:textSize="16sp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:background="#C8C8C8" />

            <Button
                android:id="@+id/bt_change_password_complete"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/bg_btn_red"
                android:text="@string/complete"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_change_passowrd_help"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="11dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_help" />
    </RelativeLayout>

</ScrollView>